[tool.poetry]
name = "github_payload"
version = "0.1.0"
description = "Handle github webhooks payload"
authors = ["Hazuli Fidastian <hazuli.fidastian@gmail.com>"]

[tool.poetry.dependencies]
python = "~=3.7"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
